# spq

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: Spq_creation_examples.ipynb  Spq_showcase.ipynb
spq/: __init__.py  aero.py  gr.py  pq-aero.json  spq.py
spq/spq/: aero.py  environ.py
test/: test_aero.py  test_basic.py  test_basics.py  test_spq.py
