[project]
name = "spq"
version = "0.1.1"
description = "spq - simple physical quantities"
authors = [
  { name="Hidden", email="ketakopter@gmail.com" },
]
dependencies = [
  "numpy"
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research"
]

[project.urls]
Homepage = "https://github.com/ketakopter/spq"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["spq"]  # ["*"] by default